force-app/main/default/objects/Activity/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Thank you</fullName>
            </value>
            <value>
                <fullName>Welcome</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Due diligence</fullName>
            </value>
            <value>
                <fullName>Sales call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>