force-app/main/default/objects/Activity/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery - Desktop</fullName>
                <default>true</default>
                <label>Delivery - Desktop</label>
            </value>
            <value>
                <fullName>Delivery - API</fullName>
            </value>
            <value>
                <fullName>Delivery - Undefined</fullName>
            </value>
            <value>
                <fullName>Delivery Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>