force-app/main/default/objects/Activity/fields/Demo_ECN_and_API_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Demo_ECN_and_API_Credentials__c</fullName>
    <inlineHelpText>Please enter the Demo ECN and API credentials here. This will auto populate the ticket&#39;s field automatically.</inlineHelpText>
    <label>Demo ECN and API Credentials</label>
    <type>TextArea</type>
</CustomField>