force-app/main/default/objects/Activity/fields/Projected_Planning_and_Prep_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projected_Planning_and_Prep_Completed__c</fullName>
    <label>Projected Planning and Prep Completed</label>
    <type>Date</type>
</CustomField>