force-app/main/default/objects/Activity/listViews/My_Open_Activities.listView-meta.xml
<ListView>
    <fullName>My_Open_Activities</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>ECN__c</columns>
    <columns>Related_Account__c</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHO_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Task.Sales_Task,Task.Service_Desk_Task,Event.Sales_Event,Event.Service_Desk_Event</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,Waiting on someone else,Deferred</value>
    </filters>
    <label>My Open Activities</label>
    <sharedTo/>
</ListView>