force-app/main/default/objects/Activity/listViews/MyClosedActivities.listView-meta.xml
<ListView>
    <fullName>MyClosedActivities</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>ECN__c</columns>
    <columns>Related_Account__c</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHO_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>My Closed Activities</label>
</ListView>