force-app/main/default/objects/Activity/listViews/MyDelegatedActivities.listView-meta.xml
<ListView>
    <fullName>MyDelegatedActivities</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>ECN__c</columns>
    <columns>Related_Account__c</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHO_NAME</columns>
    <filterScope>Delegated</filterScope>
    <label>My Delegated Activities</label>
</ListView>