force-app/main/default/objects/Activity/listViews/TodaysTasks.listView-meta.xml
<ListView>
    <fullName>TodaysTasks</fullName>
    <columns>TASK.DUE_DATE</columns>
    <columns>Related_Account__c</columns>
    <columns>ECN__c</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHO_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,Waiting on someone else</value>
    </filters>
    <label>Today&#39;s Tasks</label>
</ListView>